# product-hub

./: .env  Dockerfile  README.md  app.py  config.py  docker-compose.yml  fake_store_service.py  models.py  pyproject.toml  routes.py  schemas.py  settings.py
docker/db/: init_db.sql
migrations/versions/: 7dbe32a5002b_initial_migration.py
