[tool.poetry]
name = "product-hub"
version = "0.1.0"
description = "Product Hub API"
authors = ["Jeferson Ferreira da Silva <jeferson.mab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-openapi3 = "^3.1.3"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.3.4"
flask-cors = "^4.0.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
